--- a/html.html
+++ b/html.html
@@ -161,7 +161,7 @@
           } else {
             if(dx > 0) {
               // 右滑：開啟新分頁（示範網頁）
-              window.open('https://example.com', '_blank');
+              window.open(location.href, '_blank');
             } else {
               // 左滑：清空編輯器
               clearEditor();
