--- a/emperor.html
+++ b/emperor.html
@@ -238,8 +238,8 @@
             <path d="M5 16L3 5L8.5 10L12 4L15.5 10L21 5L19 16H5ZM19 19C19 19.5304 18.7893 20.0391 18.4142 20.4142C18.0391 20.7893 17.5304 21 17 21H7C6.46957 21 5.96086 20.7893 5.58579 20.4142C5.21071 20.0391 5 19.5304 5 19V18H19V19Z"/>
         </svg>
         
-        <p style="color:#666; font-size: 12px; letter-spacing: 5px; margin-top: 15px;">NOIR EDITION</p>
-        <button class="btn" onclick="requestPermission()">INITIALIZE</button>
+        <p style="color:#666; font-size: 12px; letter-spacing: 5px; margin-top: 15px;">EMPEROR CARDS</p>
+        <button class="btn" onclick="requestPermission()">START</button>
     </div>
 
     <div id="screen-game-a" class="screen">
